--- a/apphere/Featured.storyboard
+++ b/apphere/Featured.storyboard
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -19,27 +22,19 @@
             <objects>
                 <viewController storyboardIdentifier="featured1" id="eLb-iU-j7y" userLabel="Featured Page 1" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1kb-2i-s2b">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Featured 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wY7-hp-gG7">
-                                <rect key="frame" x="119.5" y="229.5" width="81" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="triosefeat" translatesAutoresizingMaskIntoConstraints="NO" id="fWF-ef-DIH">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="479"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="triosefeat" translatesAutoresizingMaskIntoConstraints="NO" id="fWF-ef-DIH" userLabel="Image">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="fWF-ef-DIH" firstAttribute="top" secondItem="1kb-2i-s2b" secondAttribute="top" id="8U9-ai-ZFh"/>
-                            <constraint firstItem="fWF-ef-DIH" firstAttribute="centerY" secondItem="wY7-hp-gG7" secondAttribute="centerY" id="Ku0-gH-FAh"/>
-                            <constraint firstItem="fWF-ef-DIH" firstAttribute="centerX" secondItem="wY7-hp-gG7" secondAttribute="centerX" id="NZ9-Op-06f"/>
+                            <constraint firstAttribute="trailing" secondItem="fWF-ef-DIH" secondAttribute="trailing" id="GPl-eh-lCe"/>
                             <constraint firstItem="fWF-ef-DIH" firstAttribute="leading" secondItem="1kb-2i-s2b" secondAttribute="leading" id="a1b-LJ-Zup"/>
-                            <constraint firstItem="wY7-hp-gG7" firstAttribute="centerX" secondItem="1kb-2i-s2b" secondAttribute="centerX" id="iDY-NM-fiR"/>
-                            <constraint firstItem="wY7-hp-gG7" firstAttribute="centerY" secondItem="1kb-2i-s2b" secondAttribute="centerY" id="woU-ML-SEu"/>
+                            <constraint firstAttribute="bottom" secondItem="fWF-ef-DIH" secondAttribute="bottom" id="ntf-JS-d9d"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dax-3W-mPH"/>
                     </view>
@@ -53,11 +48,14 @@
             <objects>
                 <viewController storyboardIdentifier="featured2" id="TOW-bW-CDr" userLabel="Featured Page 2" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KtS-VR-aze">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Featured 2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ptn-I0-XZx">
-                                <rect key="frame" x="118.5" y="229.5" width="83" height="21"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rpm" translatesAutoresizingMaskIntoConstraints="NO" id="iph-lG-qCS" userLabel="Image">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose an image for this page" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ptn-I0-XZx" userLabel="TODO">
+                                <rect key="frame" x="71.5" y="323" width="233" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -65,7 +63,11 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="iph-lG-qCS" firstAttribute="top" secondItem="KtS-VR-aze" secondAttribute="top" id="3IK-af-N0s"/>
                             <constraint firstItem="ptn-I0-XZx" firstAttribute="centerY" secondItem="KtS-VR-aze" secondAttribute="centerY" id="4FN-Zt-fJd"/>
+                            <constraint firstAttribute="bottom" secondItem="iph-lG-qCS" secondAttribute="bottom" id="68Z-3l-uDS"/>
+                            <constraint firstAttribute="trailing" secondItem="iph-lG-qCS" secondAttribute="trailing" id="Uff-6X-Oqn"/>
+                            <constraint firstItem="iph-lG-qCS" firstAttribute="leading" secondItem="KtS-VR-aze" secondAttribute="leading" id="Ybc-Zg-vDf"/>
                             <constraint firstItem="ptn-I0-XZx" firstAttribute="centerX" secondItem="KtS-VR-aze" secondAttribute="centerX" id="v93-37-uVy"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KAg-if-clj"/>
@@ -80,26 +82,34 @@
             <objects>
                 <viewController storyboardIdentifier="UIViewController-8rJ-Kc-sve" id="8rJ-Kc-sve" customClass="FeaturedViewController" customModule="apphere" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HRF-32-nvx">
-                                <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <connections>
                                     <segue destination="wn1-vw-aRD" kind="embed" identifier="pageView" id="tdu-VR-3Dq"/>
                                 </connections>
                             </containerView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="CFg-ac-PZp">
+                                <rect key="frame" x="168" y="610" width="39" height="37"/>
+                            </pageControl>
                         </subviews>
                         <color key="backgroundColor" red="0.53333333329999999" green="0.33725490200000002" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="HRF-32-nvx" firstAttribute="bottom" secondItem="O1u-W8-tvY" secondAttribute="bottom" id="0DG-1c-BfO"/>
+                            <constraint firstItem="HRF-32-nvx" firstAttribute="bottom" secondItem="QS5-Rx-YEW" secondAttribute="bottom" id="0DG-1c-BfO"/>
+                            <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" secondItem="CFg-ac-PZp" secondAttribute="bottom" constant="20" id="3Hu-8E-A0R"/>
                             <constraint firstItem="HRF-32-nvx" firstAttribute="trailing" secondItem="QS5-Rx-YEW" secondAttribute="trailing" id="BnM-GI-aUE"/>
-                            <constraint firstItem="HRF-32-nvx" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" id="Mdd-cc-BaM"/>
+                            <constraint firstItem="CFg-ac-PZp" firstAttribute="centerX" secondItem="O1u-W8-tvY" secondAttribute="centerX" id="DeE-Jc-vue"/>
+                            <constraint firstItem="HRF-32-nvx" firstAttribute="top" secondItem="QS5-Rx-YEW" secondAttribute="top" id="Mdd-cc-BaM"/>
                             <constraint firstItem="HRF-32-nvx" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leading" id="gWC-my-mud"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="bookmarks" id="cPa-gy-q4n"/>
+                    <connections>
+                        <outlet property="pageControl" destination="CFg-ac-PZp" id="p57-oQ-8C7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
@@ -107,6 +117,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="rpm" width="1080" height="720"/>
         <image name="triosefeat" width="517" height="600"/>
     </resources>
 </document>
