--- a/apphere/Info.storyboard
+++ b/apphere/Info.storyboard
@@ -19,25 +19,33 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9RJ-yp-B8k">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <connections>
                                     <segue destination="jRa-hq-HBt" kind="embed" identifier="pageView" id="Pgk-Tn-IFg"/>
                                 </connections>
                             </containerView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="aEO-ty-1AJ">
+                                <rect key="frame" x="168" y="630" width="39" height="37"/>
+                            </pageControl>
                         </subviews>
                         <color key="backgroundColor" red="0.53476089239120483" green="0.33745265007019043" blue="0.9311138391494751" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="9RJ-yp-B8k" secondAttribute="bottom" id="8sp-5g-xGR"/>
+                            <constraint firstAttribute="bottom" secondItem="9RJ-yp-B8k" secondAttribute="bottom" id="8sp-5g-xGR"/>
                             <constraint firstItem="9RJ-yp-B8k" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="YZj-uR-xGJ"/>
-                            <constraint firstItem="9RJ-yp-B8k" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" id="cSp-5a-Chx"/>
+                            <constraint firstItem="9RJ-yp-B8k" firstAttribute="top" secondItem="tsR-hK-woN" secondAttribute="top" id="cSp-5a-Chx"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="aEO-ty-1AJ" secondAttribute="bottom" id="eef-Jr-6Nc"/>
                             <constraint firstAttribute="trailing" secondItem="9RJ-yp-B8k" secondAttribute="trailing" id="fca-ow-2gP"/>
+                            <constraint firstItem="aEO-ty-1AJ" firstAttribute="centerX" secondItem="PQr-Ze-W5v" secondAttribute="centerX" id="hLJ-eZ-5nO"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="more" id="zIn-u1-VzW">
                         <color key="badgeColor" red="0.53476089240000002" green="0.33745265009999997" blue="0.93111383910000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBarItem>
+                    <connections>
+                        <outlet property="pageControl" destination="aEO-ty-1AJ" id="tof-kF-GNx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
@@ -86,7 +94,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="dZR-F8-yn7">
-                                <rect key="frame" x="16" y="20" width="343" height="647"/>
+                                <rect key="frame" x="16" y="40" width="343" height="627"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Apphere for Users
 
@@ -100,7 +108,7 @@ Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed 
                         <constraints>
                             <constraint firstItem="dZR-F8-yn7" firstAttribute="trailing" secondItem="Acq-Xr-dJi" secondAttribute="trailingMargin" id="I14-oV-nXL"/>
                             <constraint firstItem="dZR-F8-yn7" firstAttribute="leading" secondItem="Acq-Xr-dJi" secondAttribute="leadingMargin" id="cl4-uD-UWh"/>
-                            <constraint firstItem="dZR-F8-yn7" firstAttribute="top" secondItem="a1h-2g-AfI" secondAttribute="top" id="gcU-1M-k1y"/>
+                            <constraint firstItem="dZR-F8-yn7" firstAttribute="top" secondItem="a1h-2g-AfI" secondAttribute="top" constant="20" id="gcU-1M-k1y"/>
                             <constraint firstItem="dZR-F8-yn7" firstAttribute="bottom" secondItem="a1h-2g-AfI" secondAttribute="bottom" id="lSo-ZM-x68"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="a1h-2g-AfI"/>
@@ -119,7 +127,7 @@ Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed 
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="cq8-nJ-eWZ">
-                                <rect key="frame" x="16" y="20" width="343" height="647"/>
+                                <rect key="frame" x="16" y="40" width="343" height="627"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Apphere for Businesses
 
@@ -133,7 +141,7 @@ Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed 
                         <constraints>
                             <constraint firstItem="cq8-nJ-eWZ" firstAttribute="trailing" secondItem="ZjZ-CE-dcu" secondAttribute="trailingMargin" id="EU8-ld-Rkc"/>
                             <constraint firstItem="cq8-nJ-eWZ" firstAttribute="bottom" secondItem="g0h-eb-62K" secondAttribute="bottom" id="GNB-1p-gBe"/>
-                            <constraint firstItem="cq8-nJ-eWZ" firstAttribute="top" secondItem="g0h-eb-62K" secondAttribute="top" id="pbs-dy-CNY"/>
+                            <constraint firstItem="cq8-nJ-eWZ" firstAttribute="top" secondItem="g0h-eb-62K" secondAttribute="top" constant="20" id="pbs-dy-CNY"/>
                             <constraint firstItem="cq8-nJ-eWZ" firstAttribute="leading" secondItem="ZjZ-CE-dcu" secondAttribute="leadingMargin" id="rFL-pa-QQD"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="g0h-eb-62K"/>
@@ -152,7 +160,7 @@ Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed 
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView autoresizesSubviews="NO" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mWh-pL-eKW">
-                                <rect key="frame" x="16" y="214" width="345" height="452"/>
+                                <rect key="frame" x="16" y="195" width="344" height="452"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Apphere is building the first multi city-scale platform leveraging iBeacon technology to provide extensive informational data and utility tools to businesses both large and small. Apphere while operating under the SaaS B2B model, Apphere is centered and focused on the consumer experience by creating a rich feature platform for our daily consumers. We connect people to places and places to people, automagically.                                                                     
 We’re changing how people interact with the world around them. Consumers will discover and capture detailed exciting information around them automagically. Our users can frequent any local businesses or public place and we simply appear. Our users are not required to complete any manual actionables other than carrying a smartphone with them. It’s simply magic. 
@@ -165,7 +173,7 @@ Developer: Derek Sheldon</string>
                                 <textInputTraits key="textInputTraits"/>
                             </textView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="woQ-wO-rNz">
-                                <rect key="frame" x="1" y="55" width="375" height="125"/>
+                                <rect key="frame" x="0.0" y="35" width="376" height="125"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="125" id="YvV-j5-eYD"/>
                                 </constraints>
@@ -174,12 +182,12 @@ Developer: Derek Sheldon</string>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="mWh-pL-eKW" firstAttribute="leading" secondItem="OGC-Pc-wol" secondAttribute="leadingMargin" id="4ec-K2-mLn"/>
-                            <constraint firstItem="woQ-wO-rNz" firstAttribute="leading" secondItem="SFJ-Iw-O7e" secondAttribute="leading" constant="1" id="EZn-jf-LTL"/>
-                            <constraint firstItem="SFJ-Iw-O7e" firstAttribute="trailing" secondItem="mWh-pL-eKW" secondAttribute="trailing" constant="14" id="Kn8-70-ICl"/>
+                            <constraint firstItem="woQ-wO-rNz" firstAttribute="leading" secondItem="OGC-Pc-wol" secondAttribute="leading" id="EZn-jf-LTL"/>
+                            <constraint firstAttribute="trailing" secondItem="mWh-pL-eKW" secondAttribute="trailing" constant="15" id="Kn8-70-ICl"/>
                             <constraint firstItem="woQ-wO-rNz" firstAttribute="centerX" secondItem="mWh-pL-eKW" secondAttribute="centerX" id="P7M-Bj-bEK"/>
-                            <constraint firstItem="mWh-pL-eKW" firstAttribute="top" secondItem="woQ-wO-rNz" secondAttribute="bottom" constant="34" id="eLZ-KA-XOh"/>
-                            <constraint firstItem="woQ-wO-rNz" firstAttribute="top" secondItem="SFJ-Iw-O7e" secondAttribute="top" constant="35" id="iNO-O2-FZA"/>
-                            <constraint firstItem="SFJ-Iw-O7e" firstAttribute="bottom" secondItem="mWh-pL-eKW" secondAttribute="bottom" constant="1" id="wzt-iq-GfY"/>
+                            <constraint firstItem="mWh-pL-eKW" firstAttribute="top" secondItem="woQ-wO-rNz" secondAttribute="bottom" constant="35" id="eLZ-KA-XOh"/>
+                            <constraint firstItem="woQ-wO-rNz" firstAttribute="top" secondItem="OGC-Pc-wol" secondAttribute="top" constant="35" id="iNO-O2-FZA"/>
+                            <constraint firstItem="SFJ-Iw-O7e" firstAttribute="bottom" secondItem="mWh-pL-eKW" secondAttribute="bottom" constant="20" id="wzt-iq-GfY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SFJ-Iw-O7e"/>
                     </view>
